--- a/src/styles/_Portfolio.scss
+++ b/src/styles/_Portfolio.scss
@@ -129,6 +129,7 @@
       );
       color: white;
       padding: 2.5rem;
+      text-shadow: none;
 
       .quote {
         font-family: serif !important;
@@ -210,9 +211,9 @@
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
     border-radius: 1rem;
     min-height: 16rem;
-    transform: translateY(15rem);
+    transform: translateY(30rem);
     opacity: 0;
-    transition: 1s;
+    transition: 1.5s;
     padding-bottom: 1rem;
 
     > * {
