--- a/src/styles/_animation.scss
+++ b/src/styles/_animation.scss
@@ -48,7 +48,18 @@
   }
   to {
     transform: translateY(0);
-    opacity: 0.9;
+    opacity: 1;
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
   }
 }
 
