--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -325,7 +325,8 @@
   }
 
   .contact-form-wrapper {
-    border-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 
   .contact-form-col {
