Slightly modified Home page text; Reduce border-radius for Contact form.

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -325,8 +325,7 @@
   }
 
   .contact-form-wrapper {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    border-radius: 1.25rem 1.25rem 0 0;
   }
 
   .contact-form-col {
