--- a/src/styles/_crumbs.scss
+++ b/src/styles/_crumbs.scss
@@ -136,7 +136,7 @@ footer {
       &:last-child {
         color: $theme-primary-v3;
         font-size: 2rem;
-        font-family: 'Google Sans' !important;
+        font-family: 'Google Sans', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
         margin-top: 0.5rem;
       }
     }
