--- a/src/styles/_Gallery.scss
+++ b/src/styles/_Gallery.scss
@@ -42,6 +42,8 @@
   color: #fff;
   padding: 1rem;
   text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
   text-align: center;
   font-weight: bold;
   background-color: #73410fe3;
