--- a/src/styles/_Products.scss
+++ b/src/styles/_Products.scss
@@ -1,6 +1,20 @@
 @import 'constants';
 
 .Products {
+  h2 {
+    position: relative;
+    color: $theme-primary-v2;
+
+    &::before {
+      @include before-or-after-v2(
+        $w: calc(100% - 1rem),
+        $l: 0.5rem,
+        $bg: $theme-primary-v8,
+        $br: 0.35rem
+      );
+    }
+  }
+
   .product {
     // @include debugger();
 
