--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 @import 'Nav';
 @import 'Contact';
 @import 'Companies';
-@import 'News';
+@import 'Blog';
 @import 'Products';
 @import 'Portfolio';
 @import "Gallery";
