Add background gradients for card images for when they're loading, also add min heights and min-widths.

--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -58,6 +58,10 @@
 .Person-Image {
   border-radius: 1rem;
   width: 20rem;
+  min-height: 14rem;
+  min-width: 14rem;
+  color: white;
+  background-image: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
 }
 
 .Certificate {
