--- a/src/styles/_Modal.scss
+++ b/src/styles/_Modal.scss
@@ -102,6 +102,7 @@
       height: 100%;
       justify-content: center;
       max-height: inherit;
+      transition: 1s;
 
       img {
         align-self: center;
