--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -195,6 +195,13 @@
 }
 
 @media screen and (max-width: 767px) {
+  //About page style(s)
+  .WhoWeAre {
+    .history-container {
+      order: 1;
+    }
+  }
+
   //Home page style(s)
   .Home {
     .splash-wrapper {
