--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -6,6 +6,7 @@
   // @include debugger();
   .WhoWeAre {
     .logo-img {
+      min-height: 10rem;
       box-shadow: 0 0 3rem rgb($prim-r + 100, $prim-g + 100, $prim-b + 100);
     }
   }
@@ -24,18 +25,6 @@
       }
     }
   }
-
-  .Certificate {
-    &.include-page-header {
-      .page-title::before {
-        background: {
-          image: url('/images/assurance.jpg');
-          size: cover;
-          position: center;
-        }
-      }
-    }
-  }
 }
 
 .Client-Image {
@@ -46,7 +35,6 @@
   height: 100px;
   width: 100px;
   filter: grayscale(1);
-  background-image: url('/images/portfolio/enugu_logo.jpg');
   transition: all 0.5s ease-in-out;
 }
 
@@ -61,7 +49,11 @@
   min-height: 14rem;
   min-width: 14rem;
   color: white;
-  background-image: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
+  background-image: linear-gradient(
+    to left,
+    $theme-primary-v4,
+    $theme-primary-v2
+  );
 }
 
 .Certificate {
