--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -202,6 +202,10 @@
     }
   }
 
+  .OurPeople .page-title {
+    margin-bottom: 16rem !important;
+  }
+
   //Home page style(s)
   .Home {
     .splash-wrapper {
@@ -266,6 +270,7 @@
       font-size: 2.5rem;
       text-align: center !important;
       display: block;
+      margin: 12rem 0;
 
       .before,
       .after {
