--- a/src/styles/_animation.scss
+++ b/src/styles/_animation.scss
@@ -218,36 +218,32 @@
   }
 }
 
-body.companies.no-webp {
-  @keyframes swapBg {
-    0%,
-    30% {
-      background-image: url('/images/switch-gears.jpg');
-    }
-    33%,
-    63% {
-      background-image: url('/images/switch-gears-2.jpg');
-    }
-    66%,
-    97% {
-      background-image: url('/images/switch-gears-3.jpg');
-    }
+@keyframes swapBg {
+  0%,
+  30% {
+    background-image: url('/images/switch-gears.jpg');
+  }
+  33%,
+  63% {
+    background-image: url('/images/switch-gears-2.jpg');
+  }
+  66%,
+  97% {
+    background-image: url('/images/switch-gears-3.jpg');
   }
 }
 
-body.companies.webp {
-  @keyframes swapBg {
-    0%,
-    30% {
-      background-image: url('/images/switch-gears.webp');
-    }
-    33%,
-    63% {
-      background-image: url('/images/switch-gears-2.webp');
-    }
-    66%,
-    97% {
-      background-image: url('/images/switch-gears-3.webp');
-    }
+@keyframes swapBgWebp {
+  0%,
+  30% {
+    background-image: url('/images/switch-gears.webp');
+  }
+  33%,
+  63% {
+    background-image: url('/images/switch-gears-2.webp');
+  }
+  66%,
+  97% {
+    background-image: url('/images/switch-gears-3.webp');
   }
 }
